# dps

./: .gitignore  CMakeLists.txt  IPS.drawio  README.md  build.sh
apps/: CMakeLists.txt  cma_allocate.cpp  create_dma_buffer.cpp  create_publisher_base.cpp  cvcpp.cpp  epoll_dma_buffer.cpp  gen_struct.cpp  inotify_topic.cpp  main.cpp  notify_files_changed.py  open_dma_buffer.cpp  simple_node.cpp  stress.sh
experiments/array/: pub_syb_ctx.py
experiments/capnproto/: check.py  image.capnp  make.sh
experiments/cma/: cma.py  dma_heap.py  dma_io.py  open_close_cma.py  pub_sub_cma.py  read_cma.py  syscall.py  v4l2_io.py  write_cma.py
experiments/cpp_python/: read_cma.py  setup.py  test.cpp
experiments/cpp_python/include/: allocator.h
experiments/cpp_python/python/: py_allocator.cpp
experiments/cpp_python/src/: allocator.cpp
experiments/dma_proxy/: setup.py
experiments/dma_proxy/include/: dma_proxy.h  linux_proxy.h
experiments/dma_proxy/python/: dma_proxy_python.cpp  linux_proxy_python.cpp
experiments/dma_proxy/src/: dma_proxy.cpp  linux_proxy.cpp
experiments/dma_sync/: 1M_framebuffers.py  check_linux_proxy_pub.py  check_linux_proxy_sub.py  notify_files_changed.py  pizdim_v4l2.py  temp_file.py
experiments/dps/: CMakeLists.txt  build.sh  setup.py
experiments/dps/include/: dma_proxy.h
experiments/dps/include/dps/: dps.h
experiments/dps/include/dps/core/: base_publisher.h  config.h  node.h  publisher.h  publisher.hpp
experiments/dps/shared/include/dps/: core.h
experiments/dps/shared/src/: node.cpp
experiments/dps/src/: base_publisher.cpp  dma_proxy.cpp  dma_proxy.h  node.cpp  publisher.cpp
experiments/dps_test/: CMakeLists.txt  build.sh  main.cpp  notify_files_changed.py
experiments/file_and_directory_delete/: main.cpp
experiments/flatbuffers/: check.py  flat_diz_buffer  flat_diz_buffer.cpp  image.fbs  make.sh
experiments/garbage_collector/: CMakeLists.txt  build.sh  main.cpp
experiments/linux_proxy/include/: linux_proxy.h
experiments/linux_proxy/python/: linux_proxy_python.cpp
experiments/linux_proxy/src/: linux_proxy.cpp
experiments/nvidia_dma_read/: pizda_sub.py
experiments/picamera/: cam.py
experiments/render/: Linux_DRM_OpenGLES.c  drm_test  drm_test.c  drmgl
experiments/shared_ptr_delete/: main.cpp
experiments/shm/: pub_array.py  pub_array_alt.py  sub_array.py  sub_array_2.py
experiments/static_cast/: main.cpp
experiments/sync/: check_linux_proxy_pub.py  check_linux_proxy_sub.py  dma_heap.py  epoll_proc.py  eventfd_read.py  eventfd_write.py  rpicam_suck_sub.py
experiments/template_match/: main.cpp
experiments/uvc_camera/: capture  capture.c  make.sh
experiments/video4linux/: dmabuf-v4l2  dmabuf-v4l2.c  dmabuf.c  make.sh
include/: allocator.h  exceptions.h  ips.h  ips_dtype.h  publisher.h  subscriber.h
include/dps/: dps.h
include/dps/core/: _base_publisher.h  _node.h  _publisher.hpp  base_publisher.h  common.h  config.h  dma_buffer.h  event.h  node.h  publisher.hpp  publisher_base.h
include/dps/msg/: publisher_info_generated.h
msg/: publisher_info.fbs  simple_msg.h
src/: CMakeLists.txt  _base_publisher.cpp  _node.cpp  allocator.cpp  base_publisher.cpp  dma_buffer.cpp  event.cpp  ips.cpp  node.cpp  publisher_base.cpp  subscriber.cpp
